--- a/nginx/conf.d/prod.conf
+++ b/nginx/conf.d/prod.conf
@@ -1,6 +1,3 @@
-##############################
-# Laravel API - api.training.com
-##############################
 server {
     listen 80;
     server_name api.training.com;
@@ -16,7 +13,7 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_index index.php;
-        fastcgi_pass api:9000;  # Assuming your Laravel container is named 'api' and exposes php-fpm on port 9000
+        fastcgi_pass api:9000;
     }
 
     location ~ /\.ht {
@@ -24,9 +21,6 @@ server {
     }
 }
 
-##############################
-# Frontend SPA - training.com, www.training.com, spa.training.com
-##############################
 server {
     listen 80;
     server_name training.com www.training.com spa.training.com;
