--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,4 +1,5 @@
-FROM php:8.2-fpm
+# Base image
+FROM php:8.2-fpm AS base
 
 RUN apt-get update && apt-get install -y \
     libfreetype-dev \
@@ -16,6 +17,26 @@ ENV COMPOSER_ALLOW_SUPERUSER=1
 
 COPY --from=composer:latest /usr/bin/composer /usr/local/bin/composer
 
+# Development Setup
+FROM base AS dev
+
+WORKDIR /api
+
+COPY ./api/composer.* .
+
+RUN composer install --prefer-dist --no-scripts --no-progress --no-interaction
+
+COPY ./api .
+
+COPY ./php/entrypoint.sh /
+
+ENTRYPOINT [ "sh", "/entrypoint.sh" ]
+
+CMD ["php-fpm"]
+
+# Production Setup
+FROM base AS prod
+
 WORKDIR /api
 
 COPY ./api/composer.* .
@@ -25,6 +46,7 @@ RUN composer install --prefer-dist --no-dev --no-scripts --no-progress --no-inte
 COPY ./api .
 
 COPY ./php/entrypoint.sh /
-# RUN composer dump-autoload --optimize
 
 ENTRYPOINT [ "sh", "/entrypoint.sh" ]
+
+CMD ["php-fpm"]
