--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-MYSQL_DATABASE=api
-MYSQL_USER=user@2142
-MYSQL_PASSWORD=user@2142
-MYSQL_ROOT_PASSWORD=root@2142
+MYSQL_DATABASE=
+MYSQL_USER=
+MYSQL_PASSWORD=
+MYSQL_ROOT_PASSWORD=
