--- a/compose.yaml
+++ b/compose.yaml
@@ -24,6 +24,7 @@ services:
       target: prod
     environment:
       - APP_ENV=production
+      - APP_DEBUG=false
     depends_on:
       db:
         condition: service_healthy
